# rl_assignment3

./: .gitignore  controller.py  dataset.py  latent_dataset.py  main.py  mdn_rnn.py  memory.py  pyproject.toml  report.ipynb  requirements.txt  rollout_dataset.py  student.py  t.py  train_continuos.ipynb  trainer.py  vae.py  vision.py  visualize.ipynb  world_models.py
good_models/: controller_continuous.pt
logs/vision/: events.out.tfevents.1734091351.Workstation.165275.0  events.out.tfevents.1734091351.Workstation.165275.1
models/: controller.pt  controller_continuous.pt  memory.pt
report/: main.fdb_latexmk  main.fls  main.tex  practice.tex  theory.tex
src/world_models/: __main__.py  dataset.py  episode.py  policy.py  trainer.py  trainer_od.py
src/world_models/models/: controller.py  memory.py  vision.py
tests/: test_trainer.py
